--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -7,10 +7,14 @@
 .BnB-title {
     display: flex;
     align-items: center;
+    font-size: x-large;
+    cursor: pointer;
 }
 
-.eagle-icon {
+/* .BnB-title:hover {} */
+
+.mogus-icon {
     margin: 5px;
-    width: 40px;
-    height: 50px;
+    width: 70px;
+    /* height: 50px; */
 }
