--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -1,13 +1,15 @@
 .all-spots-home {
     display: flex;
-    flex-direction: column;
-    align-items: baseline;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .home-spots {
     display: flex;
     cursor: pointer;
-    width: 25%;
+    width: 20%;
+    /* height: 10%; */
     border: 1px solid black;
     padding: 5px;
     margin: 5px;
@@ -23,6 +25,7 @@
 
 .home-preview-img {
     max-width: 100%;
+    max-height: 275px;
 }
 
 .single-spot-img {
