--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -8,14 +8,13 @@
 .home-spots {
     display: flex;
     cursor: pointer;
-    width: 20%;
-    /* height: 10%; */
+    width: 30%;
     border: 1px solid black;
     padding: 5px;
     margin: 5px;
     background-color: antiquewhite;
     flex-direction: column-reverse;
-    align-items: baseline;
+    align-items: center;
 }
 
 .home-spots-info-div {
@@ -25,7 +24,7 @@
 
 .home-preview-img {
     max-width: 100%;
-    max-height: 275px;
+    height: 300px;
 }
 
 .single-spot-img {
