--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -27,6 +27,23 @@
     height: 300px;
 }
 
-.single-spot-img {
-    width: 50%;
+.single-spot-div {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.single-spot-info-name-div {
+    width: 30%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.selected-spot-name {
+    font-size: x-large;
+}
+
+.single-spot-img-preview {
+    max-width: 40%;
 }
