--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -3,31 +3,42 @@
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    margin-top: 150px;
 }
 
 .home-spots {
     display: flex;
     cursor: pointer;
     width: 30%;
-    border: 1px solid black;
+    /* height: 20%; */
     padding: 5px;
     margin: 5px;
     background-color: antiquewhite;
     flex-direction: column-reverse;
     align-items: center;
+    border-radius: 15px;
+    border: 0px;
 }
 
 .home-spots-info-div {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: 100%;
 }
 
 .home-preview-img {
-    max-width: 100%;
-    height: 300px;
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    /* height: 300px; */
 }
 
 .single-spot-div {
+    /* margin: 0px 800px; */
+    margin-top: 150px;
+    max-height: 500px;
+    max-width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -44,6 +55,50 @@
     font-size: x-large;
 }
 
-.single-spot-img-preview {
-    max-width: 40%;
+#single-spot-info-div {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+
+.gen-img-div {
+    display: grid;
+    grid-template-columns: 50% 5px 25% 5px 25%;
+    grid-template-rows: 50% 5px 50%;
+    width: 70%;
+    max-width: 1000px;
+    height: 20%;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.single-spot-images {
+    width: 100%;
+    height: 100%;
+    /* padding: 20px; */
+}
+
+#single-spot-img-preview {
+    grid-row: 1/4;
+    grid-column: 1/2;
+}
+
+#single-spot-gen-img-1 {
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+
+#single-spot-gen-img-2 {
+    grid-row: 1/2;
+    grid-column: 5/6;
+}
+
+#single-spot-gen-img-3 {
+    grid-row: 3/4;
+    grid-column: 3/4;
+}
+
+#single-spot-gen-img-4 {
+    grid-row: 3/4;
+    grid-column: 5/6;
 }
