--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -1,4 +1,5 @@
 .all-spots-home {
+    /* margin-left: 4%; */
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -9,14 +10,16 @@
 .home-spots {
     display: flex;
     cursor: pointer;
-    width: 30%;
-    /* height: 20%; */
+    width: 20%;
+    max-height: fit-content;
     padding: 5px;
     margin: 5px;
     background-color: antiquewhite;
     flex-direction: column-reverse;
     align-items: center;
+    justify-content: center;
     border-radius: 15px;
+    /* overflow: hidden; */
     border: 0px;
 }
 
@@ -28,16 +31,18 @@
 }
 
 .home-preview-img {
-    width: 100%;
-    height: 100%;
+    width: 10000px;
+    height: 10000px;
+    max-width: 100%;
+    max-height: 300px;
     border-radius: 15px;
     /* height: 300px; */
 }
 
 .single-spot-div {
-    /* margin: 0px 800px; */
+    margin: 0px 1%;
     margin-top: 150px;
-    max-height: 500px;
+    max-height: 700px;
     max-width: 100%;
     display: flex;
     align-items: center;
@@ -45,10 +50,14 @@
 }
 
 .single-spot-info-name-div {
-    width: 30%;
+    width: 70%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    /* justify-content: space-between; */
+}
+
+.info-buttons-div {
+    display: flex;
 }
 
 .selected-spot-name {
