--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -14,7 +14,7 @@
     max-height: fit-content;
     padding: 5px;
     margin: 5px;
-    background-color: antiquewhite;
+    background-color: white;
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
