--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -10,8 +10,10 @@
 .home-spots {
     display: flex;
     cursor: pointer;
-    width: 20%;
-    max-height: fit-content;
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+    max-width: 300px;
     padding: 5px;
     margin: 5px;
     background-color: white;
@@ -40,9 +42,8 @@
 }
 
 .single-spot-div {
-    margin: 0px 1%;
-    margin-top: 150px;
-    max-height: 700px;
+    margin: 150px 5% 0px;
+    max-height: 500px;
     max-width: 100%;
     display: flex;
     align-items: center;
@@ -50,7 +51,7 @@
 }
 
 .single-spot-info-name-div {
-    width: 70%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
@@ -58,56 +59,95 @@
 
 .info-buttons-div {
     display: flex;
+    width: 90%;
+    max-width: 900px;
+    flex-direction: row;
+}
+
+.single-spot-buttons-div {
+    width: 15%;
+    display: flex;
+    justify-content: space-between;
 }
 
 .selected-spot-name {
     font-size: x-large;
 }
 
-#single-spot-info-div {
+#selected-spot-info-div {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
     width: 500px;
+    margin: 0px 0px 10px;
+    /* height: 300px; */
+    /* align-items: baseline; */
+}
+
+.dot {
+    margin: 0px 5px;
 }
 
 .gen-img-div {
     display: grid;
     grid-template-columns: 50% 5px 25% 5px 25%;
     grid-template-rows: 50% 5px 50%;
-    width: 70%;
+    /* width: 70%; */
     max-width: 1000px;
-    height: 20%;
+    height: 100%;
     overflow: hidden;
     border-radius: 20px;
 }
 
+.img-divs {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+
 .single-spot-images {
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     /* padding: 20px; */
 }
 
-#single-spot-img-preview {
+.single-spot-preview-div {
+    height: 100%;
     grid-row: 1/4;
     grid-column: 1/2;
 }
 
-#single-spot-gen-img-1 {
+.single-spot-gen-img-div-1 {
     grid-row: 1/2;
     grid-column: 3/4;
 }
 
-#single-spot-gen-img-2 {
+.single-spot-gen-img-div-2 {
     grid-row: 1/2;
     grid-column: 5/6;
 }
 
-#single-spot-gen-img-3 {
+.single-spot-gen-img-div-3 {
     grid-row: 3/4;
     grid-column: 3/4;
 }
 
-#single-spot-gen-img-4 {
+.single-spot-gen-img-div-4 {
     grid-row: 3/4;
     grid-column: 5/6;
+}
+
+.single-spot-images {
+    min-width: 100%;
+    max-width: none;
+}
+
+.modal-button {
+    cursor: pointer;
+}
+
+.review-modal-button-true {
+    pointer-events: none;
+    cursor: pointer;
 }
