--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -12,15 +12,13 @@
     align-items: center;
 }
 
-/* .material-symbols-outlined {
-    font-variation-settings:
-        'FILL' 1,
-        'wght' 100,
-        'GRAD' 0,
-        'opsz' 48;
-    background-color: green;
-} */
-
+.nav-options-div {
+    display: flex;
+    width: 100%;
+    max-width: 250px;
+    justify-content: space-between;
+    align-items: center;
+}
 
 .BnB-title {
     display: flex;
@@ -38,10 +36,22 @@
 
 .profile-button {
     background-color: white;
-    margin-right: 20px;
+    margin-right: 50px;
     border: 1px lightgray solid;
     border-radius: 30px;
     overflow: hidden;
+}
+
+.profile-button-actual {
+    background-color: white;
+    border: 0px;
+}
+
+.create-spot-button {
+    background-color: white;
+    border: 0px;
+    width: 100%;
+    padding: 0px;
 }
 
 /* .BnB-title:hover {} */
@@ -64,10 +74,25 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .dropdown-info {
-    margin: 20px;
+    padding: 20px;
+}
+
+.open-modal-button.Create.Spot {
+    padding: 20px;
+}
+
+.open-modal-button.Create.Spot:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+
+.dropdown-info:hover {
+    background-color: lightgray;
+    cursor: pointer;
 }
 
 .hidden {
