--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -1,10 +1,15 @@
+.home-main {
+    margin-top: 150px;
+}
+
+
 .all-spots-home {
-    /* margin-left: 4%; */
+    /* margin: 0px 5%; */
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 150px;
+    /* margin-top: 150px; */
 }
 
 .home-spots {
@@ -13,9 +18,9 @@
     width: 100%;
     height: 100%;
     max-height: 300px;
-    max-width: 300px;
-    padding: 5px;
-    margin: 5px;
+    max-width: 260px;
+    /* padding: 5px; */
+    margin: 0px 20px 30px;
     background-color: white;
     flex-direction: column-reverse;
     align-items: center;
@@ -27,18 +32,50 @@
 
 .home-spots-info-div {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     width: 100%;
     height: 100%;
 }
 
+.home-preview-img-div {
+    height: 300px;
+    width: 100%;
+}
+
 .home-preview-img {
-    width: 10000px;
-    height: 10000px;
-    max-width: 100%;
-    max-height: 300px;
+    width: 100%;
+    height: 100%;
     border-radius: 15px;
     /* height: 300px; */
+}
+
+.home {
+    display: flex;
+    align-items: center;
+}
+
+.home.city-state {
+    font-weight: bold;
+    width: 80%;
+}
+
+.home.stars {
+    padding: 2px 0px 0px;
+    width: 20%;
+}
+
+.home.price {
+    width: 100%;
+}
+
+.price-actual {
+    font-weight: bold;
+}
+
+.home-dot {
+    margin: 0px 1px;
+    visibility: hidden;
 }
 
 .single-spot-div {
@@ -59,13 +96,41 @@
 
 .info-buttons-div {
     display: flex;
-    width: 90%;
-    max-width: 900px;
+    width: 100%;
+    max-width: 600px;
+    /* padding: 10px; */
     flex-direction: row;
+    align-items: flex-end;
+}
+
+.edit-button {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: fit-content;
+    padding: 10px;
+    font-weight: 700;
+    background-color: white;
+    border: 0px;
+    margin: 0px 10px 10px 0px;
+}
+
+.delete-button {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: fit-content;
+    padding: 10px;
+    font-weight: 700;
+    background-color: white;
+    border: 0px;
+    margin: 0px 10px 10px 0px;
 }
 
 .single-spot-buttons-div {
-    width: 15%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
 }
@@ -78,7 +143,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 500px;
+    width: 700px;
     margin: 0px 0px 10px;
     /* height: 300px; */
     /* align-items: baseline; */
@@ -150,4 +215,38 @@
 .review-modal-button-true {
     pointer-events: none;
     cursor: pointer;
+    color: lightgray;
+}
+
+/* .review-modal-button-flase {
+    
+} */
+
+.open-modal-button.Review {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: fit-content;
+    padding: 10px;
+    font-weight: 700;
+}
+
+.open-modal-button.Review:hover {
+    background-color: lightgray;
+    border-radius: 10px;
+}
+
+.host-price-div {
+    margin: 15px 0px 0px;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px lightgray solid;
+}
+
+.single-home-price {
+    /* width: 100px; */
+    display: flex;
 }
