--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,17 @@
 /* TODO Add site wide styles */
 body {
     background-color: white;
+    font-family: sans-serif;
 }
 
 button {
-    border: 0px;
-    background-color: white;
-    /* border-radius: 5px; */
+    font-family: sans-serif;
 }
+
+/* button {
+    border: 0px;
+    background-color: transparent;
+    border-radius: 5px;
+}
+
+*/
