--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,11 +1,67 @@
 .log-in-modal-div {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    width: 100%;
+    /* align-items: center; */
+}
+
+.modal-title-div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.log-in-button {
+    margin: 10px 0px 0px;
+    padding: 20px 0px;
+    width: 100%;
+    border-radius: 10px;
+    border: 0px;
+    background-color: #DC0F62;
+    color: white;
+}
+
+.spot-form-modal-info.log-in {
+    padding: 5px;
+    margin: 0px 0px 20px;
+}
+
+.demo-user-button {
+    margin: 20px 0px 0px;
+    padding: 20px 0px;
+    width: 100%;
+    border-radius: 10px;
+    border: 0px;
+    background-color: #DC0F62;
+    color: white;
 }
 
 .log-in-form {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 20px;
+    border-bottom: 1px lightgray solid;
+    margin-bottom: 20px;
+}
+
+.github-redirect {
+    display: flex;
+    justify-content: baseline;
+    /* margin: 50px 0px 0px; */
+    color: black;
+    text-decoration: none;
+    border: 1px black solid;
+    border-radius: 10px;
+    padding: 10px 0px;
+}
+
+.github-redirect-link {
+    text-decoration: none;
+    color: black;
+    padding: 5px 190px;
+}
+
+.fa-github {
+    padding-left: 10px;
+    font-size: 30px;
 }
