--- a/frontend/src/components/ReviewFormModal/ReviewFormModal.css
+++ b/frontend/src/components/ReviewFormModal/ReviewFormModal.css
@@ -1,4 +1,8 @@
-.sign-up-button {
+.star {
+    visibility: hidden;
+}
+
+.review-form {
     margin: 5px 0px 0px;
     padding: 10px 0px;
     width: 100%;
@@ -6,13 +10,4 @@
     border: 0px;
     background-color: #DC0F62;
     color: white;
-}
-
-.spot-form-modal-info.sign-up {
-    margin: 30px 0px;
-}
-
-.sign-up-div-title {
-    display: flex;
-    justify-content: space-between;
 }
