--- a/frontend/src/components/SpotEditModal/SpotEditModal.css
+++ b/frontend/src/components/SpotEditModal/SpotEditModal.css
@@ -3,7 +3,7 @@
     background-color: white;
     padding: 40px;
     width: 500px;
-    height: fit-content;
+    height: 600px;
     border-radius: 10px;
     justify-content: center;
 }
