--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -80,7 +80,7 @@
 
 .single-spot-div {
     margin: 150px 5% 0px;
-    max-height: 500px;
+    max-height: 700px;
     max-width: 100%;
     display: flex;
     align-items: center;
@@ -97,7 +97,7 @@
 .info-buttons-div {
     display: flex;
     width: 100%;
-    max-width: 600px;
+    max-width: 1500px;
     /* padding: 10px; */
     flex-direction: row;
     align-items: flex-end;
@@ -116,6 +116,18 @@
     margin: 0px 10px 10px 0px;
 }
 
+.edit-button:hover {
+    background-color: lightgray;
+    border-radius: 20px;
+    border: 0px;
+}
+
+.delete-button:hover {
+    background-color: lightgray;
+    border-radius: 20px;
+    border: 0px;
+}
+
 .delete-button {
     cursor: pointer;
     display: flex;
@@ -130,13 +142,15 @@
 }
 
 .single-spot-buttons-div {
-    width: 100%;
+    width: 10%;
     display: flex;
     justify-content: space-between;
 }
 
 .selected-spot-name {
-    font-size: x-large;
+    font-size: xx-large;
+    font-weight: bold;
+
 }
 
 #selected-spot-info-div {
@@ -158,8 +172,8 @@
     grid-template-columns: 50% 5px 25% 5px 25%;
     grid-template-rows: 50% 5px 50%;
     /* width: 70%; */
-    max-width: 1000px;
-    height: 100%;
+    max-width: 1500px;
+    height: 50vh;
     overflow: hidden;
     border-radius: 20px;
 }
@@ -238,15 +252,75 @@
 }
 
 .host-price-div {
-    margin: 15px 0px 0px;
+    margin: 15px 0px 30px;
     width: 100%;
+    max-width: 1480px;
     padding: 10px;
     display: flex;
     justify-content: space-between;
     border-bottom: 1px lightgray solid;
 }
 
+.host {
+    font-weight: bold;
+    font-size: x-large;
+}
+
 .single-home-price {
     /* width: 100px; */
     display: flex;
+}
+
+.single-spot-master-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.review-pfp-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 48px;
+    height: 48px;
+    border-radius: 100%;
+    border: 0px;
+    overflow: hidden;
+}
+
+.review-user-div {
+    display: flex;
+}
+
+.review-user-name {
+    margin-left: 10px;
+    width: fit-content;
+    font-weight: bold;
+}
+
+.spot-reviews-div {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 80%;
+    max-width: 1500px;
+    margin-left: 5%;
+}
+
+.spot-reviews {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    /* margin-right: 35%; */
+    width: 40%;
+}
+
+.review-pfp {
+    height: 100%;
+}
+
+.review-actual {
+    width: 100%;
+    max-width: 350px;
+    overflow-wrap: break-word;
 }
