--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,6 +8,10 @@ button {
     font-family: sans-serif;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 /* button {
     border: 0px;
     background-color: transparent;
