--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -40,7 +40,7 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 20px;
-    border-bottom: 1px lightgray solid;
+    /* border-bottom: 1px lightgray solid; */
     margin-bottom: 20px;
 }
 
